Revert "Final code formatting and documentation improvements for JSON-LD parser"